stateDiagram-v2
  [*] --> Discovered
  Discovered --> Archived: snapshot + hash
  Archived --> Extracted
  Extracted --> Draft
  Draft --> NeedsReview: ambiguity/conflict
  NeedsReview --> Draft: resolved
  Draft --> Validated: deterministic validators pass
  Validated --> Approved: authorized reviewer
  Approved --> Published
  Published --> Superseded: newer revision published
  Published --> [*]
